fix(block-section): enable text wrap

--- a/src/components/calcite-block-section/calcite-block-section.scss
+++ b/src/components/calcite-block-section/calcite-block-section.scss
@@ -57,6 +57,7 @@
     my-0;
 
   text-align: initial;
+  overflow-wrap: anywhere;
 }
 
 .toggle--switch {
